--- a/src/App.scss
+++ b/src/App.scss
@@ -16,3 +16,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.app-container {
+    .header-container{
+        .navbar-nav {
+            .nav-link {
+                 &.active{
+                    color: red;
+                } 
+            }
+        }
+    }
+}
